examples/colors/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colors-deployment
spec:
  selector:
    matchLabels:
      app: colors
  replicas: 2 
  template:
    metadata:
      labels:
        app: colors
    spec:
      containers:
      - name: colors
        image: codegazers/colors:1.3
        ports:
        - containerPort: 3000
