examples/colors/full-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
spec:
  selector:
    matchLabels:
      app: red
  replicas: 2 
  template:
    metadata:
      labels:
        app: red
    spec:
      containers:
      - name: red
        image: frjaraur/colors:1.1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: red-svc
  labels:
    app: red
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 3000
    nodePort: 31761
    protocol: TCP
    name: http
  selector:
    app: red
