examples/colors/blue-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blue-ingress
spec:
  rules:
  - host: blue.example.com
    http:
      paths:
      - backend:
          serviceName: blue-svc
          servicePort: 80
