examples/colors/colors-ingress-rewrite.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-controller
  annotations:
    nginx.org/rewrites: "serviceName=red-svc rewrite=/;"
spec:
  rules:
  - host: blue.example.com
    http:
      paths:
      - path: /red/
        backend:
          serviceName: red-svc
          servicePort: 80
      - backend:
          serviceName: blue-svc
          servicePort: 80
  - host: red.example.com
    http:
      paths:
      - backend:
          serviceName: red-svc
          servicePort: 80
