examples/colors/colors-ingress-sticky.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: colors-ingress
  annotations:
    nginx.com/sticky-cookie-services: "serviceName=red-svc srv_id expires=10s path=/text;"
spec:
  rules:
  - host: blue.example.com
    http:
      paths:
      - path: /red/
        backend:
          serviceName: red-svc
          servicePort: 80
      - backend:
          serviceName: blue-svc
          servicePort: 80
  - host: red.example.com
    http:
      paths:
      - backend:
          serviceName: red-svc
          servicePort: 80
